--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="./images/TKJ SMKN KASIMAN kecil.jpg">
-		  <h1>KELAS TKJ PAK ZULI</h1>
+          <img class="logo" src="./images/tkj.jpg">
+		  <span><h1>KELAS TKJ PAK ZULI</h1></span>
         </div>
         <!-- Tambahkan ikon menu dibawah -->
         
