--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>SMK NEGERI KASIMAN</h1>
         <h1>TEKNIK KOMPUTER JARINGAN</h1>
         <h2>TEKNOLOGI LAYANAN JARINGAN</h2>
-        <p>Kelas TKJ Pak Zuli adalah Kelas yang berisi materi mata pelajaran Tekologi Layanan Jaringan.</p>
+        <p>Kelas TKJ Pak Zuli adalah situs yang berisi materi mata pelajaran Tekologi Layanan Jaringan.</p>
         <p>Materi ini diperuntukkan bagi Kelas XI dan XII Kompetensi Keahlian Teknik Komputer dan Jaringan.</p>
         <div class="btn-wrapper">
           <a href="https://wa.me/+6281391839993" class="btn wa">Whatsapp Saya</a>
