--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
           <h3>Silahkan bergabung dengan Google Classroom Saya!</h3>
         </div>
 		  <a href="https://classroom.google.com/c/NTQ0OTk0OTY2OTda?cjc=gm7r7az">
-			<span class="btn message">Kelas XI TKJ-1</span>
+			<span class="btn gc">Kelas XI TKJ-1</span>
 		  </a>		
 		  <a href="https://classroom.google.com/c/NTUyNzUxNzIzMDRa?cjc=ac3ybgq">
-			<span class="btn message">Kelas XI TKJ-2</span>
+			<span class="btn gc">Kelas XI TKJ-2</span>
 		  </a>		
 		  <a href="https://classroom.google.com/c/NTQ0OTk0OTY3NzZa?cjc=4ayzgo7">
-			<span class="btn message">Kelas XII TKJ-1</span>
+			<span class="btn gc">Kelas XII TKJ-1</span>
 		  </a>		
 		  <a href="https://classroom.google.com/c/NjUzODMzMDAyNzFa?cjc=wkhikcb">
-			<span class="btn message">Kelas XII TKJ-2</span>
+			<span class="btn gc">Kelas XII TKJ-2</span>
 		  </a>		
       </div>
     </div>
