--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>KELAS TKJ PAK ZULI</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
-<!--
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
--->
   </head>
   <body>
     <header>
@@ -96,16 +94,16 @@
           <h3>Silahkan bergabung dengan Google Classroom Saya!</h3>
         </div>
 		  <a href="https://classroom.google.com/c/NTQ0OTk0OTY2OTda?cjc=gm7r7az">
-			<span class="btn gc">Kelas XI TKJ-1</span>
+			<span class="btn message">Kelas XI TKJ-1</span>
 		  </a>		
 		  <a href="https://classroom.google.com/c/NTUyNzUxNzIzMDRa?cjc=ac3ybgq">
-			<span class="btn gc">Kelas XI TKJ-2</span>
+			<span class="btn message">Kelas XI TKJ-2</span>
 		  </a>		
 		  <a href="https://classroom.google.com/c/NTQ0OTk0OTY3NzZa?cjc=4ayzgo7">
-			<span class="btn gc">Kelas XII TKJ-1</span>
+			<span class="btn message">Kelas XII TKJ-1</span>
 		  </a>		
 		  <a href="https://classroom.google.com/c/NjUzODMzMDAyNzFa?cjc=wkhikcb">
-			<span class="btn gc">Kelas XII TKJ-2</span>
+			<span class="btn message">Kelas XII TKJ-2</span>
 		  </a>		
       </div>
     </div>
