--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="./images/tkj.jpg">
+          <img class="logo" src="./images/tkj.png">
           <span><h1>KELAS TKJ PAK ZULI</h1></span>
         </div>
         <!-- Tambahkan ikon menu dibawah -->
