--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <div class="header-left">
           <img class="logo" src="./images/tkj.png">
         </div>
-        <!-- Tambahkan ikon menu dibawah -->
-        
         <div class="header-right">
-          <a href="https://sites.google.com/view/kelas-pakzuli/tentang">About</a>
+          <a href="https://sites.google.com/view/kelas-tkj-pak-zuli-bantuan">Help</a>
+          <a href="https://sites.google.com/view/kelas-tkj-pak-zuli-tentang">About</a>
         </div>
       </div>
     </header>
@@ -27,17 +26,15 @@
 		<h1>SMK NEGERI KASIMAN</h1>
         <h1>TEKNIK KOMPUTER JARINGAN</h1>
         <h2>TEKNOLOGI LAYANAN JARINGAN</h2>
+		<br>
         <p>Kelas TKJ Pak Zuli adalah situs yang berisi materi mata pelajaran Tekologi Layanan Jaringan.</p>
         <p>Materi ini diperuntukkan bagi Kelas XI dan XII Kompetensi Keahlian Teknik Komputer dan Jaringan.</p>
 		<br><br>
         <div class="btn-wrapper">
-          <a href="https://wa.me/+6281391839993" class="btn wa">Whatsapp Saya</a>
-          <br><br>
-          <!--
-          <p>atau</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
-	  -->
+          <a href="https://wa.me/+6281391839993">
+		    <img src="./images/wa.png">
+		  </a>
+		  <p>Whatsapp Saya</p>
         </div>
       </div>
     </div>
@@ -51,8 +48,7 @@
             <div class="lesson-icon">
               <a href="https://sites.google.com/view/kelas-tkj-pak-zuli-absensi">
                 <img src="./images/absensi.png">
-				<p>ABSENSI</p>
-	      </a> 
+			  </a> 
             </div>
             <p class="txt-contents">Formulir Absensi bagi peserta didik.</p>
           </div>
@@ -60,8 +56,7 @@
             <div class="lesson-icon">
               <a href="https://sites.google.com/view/kelas-tkj-pak-zuli-materi">
                 <img src="./images/materi.png">
-                <p>MATERI</p>
-	      </a>
+			  </a>
             </div>
             <p class="txt-contents">Berisi Materi Teori Teknologi Layanan Jaringan.</p>
           </div>
@@ -69,8 +64,7 @@
             <div class="lesson-icon">
               <a href="https://sites.google.com/view/kelas-tkj-pak-zuli-praktikum">
                 <img src="./images/praktikum.png">
-                <p>PRAKTIKUM</p>
-	      </a>	
+			  </a>	
             </div>
             <p class="txt-contents">Berisi Materi Praktikum Teknologi Layanan Jaringan.</p>
           </div>
@@ -78,8 +72,7 @@
             <div class="lesson-icon">
               <a href="https://sites.google.com/view/kelas-tkj-pak-zuli-soal">
                 <img src="./images/soal.png">
-                <p>SOAL</p>
-	      </a>	
+			  </a>	
             </div>
             <p class="txt-contents">Berisi Kumpulan Soal Teknologi Layanan Jaringan.</p>
           </div>
