--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Google Classroom</h2>
+          <h2>Google Classroom:</h2>
           <h3>Silahkan bergabung dengan Google Classroom Saya!</h3>
         </div>
 		  <a href="https://classroom.google.com/c/NTQ0OTk0OTY2OTda?cjc=gm7r7az">
