--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class="container">
 		<br><br>
 		<h1>SMK NEGERI KASIMAN</h1>
-        <h1>TEKNIK KOMPUTER JARINGAN</h1>
-        <h2>TEKNOLOGI LAYANAN JARINGAN</h2>
+        <h2>TEKNIK KOMPUTER DAN JARINGAN</h2>
+        <h3>TEKNOLOGI LAYANAN JARINGAN</h3>
 		<br>
-        <p>Kelas TKJ Pak Zuli adalah situs yang berisi materi mata pelajaran Tekologi Layanan Jaringan.</p>
+        <p>Kelas TKJ Pak Zuli adalah situs yang berisi materi mata pelajaran Teknologi Layanan Jaringan.</p>
         <p>Materi ini diperuntukkan bagi Kelas XI dan XII Kompetensi Keahlian Teknik Komputer dan Jaringan.</p>
 		<br><br>
         <div class="btn-wrapper">
